Show clock icon for time questions
Signed-off-by: Christian Hartmann <chris-hartmann@gmx.de>

--- a/css/icons.scss
+++ b/css/icons.scss
@@ -31,6 +31,7 @@
 @include icon-black-white('answer-long', 'forms', 1);
 @include icon-black-white('answer-date', 'forms', 1);
 @include icon-black-white('answer-datetime', 'forms', 1);
+@include icon-black-white('answer-time', 'forms', 1);
 @include icon-black-white('drag-handle', 'forms', 1);
 
 .icon-yes {
